# gl_image_effects

./: .gitignore  CMakeLists.txt  MainForm.qml  README.md  android_release.keystore  application.qml  flatstyle.qml  main.cpp  openglitem.cpp  openglitem.h  res.qrc  squircle.h
shader/: filter.frag  filter.vert
